# llm-experiments

./: LICENSE  README.md  pre-commit.yml  pyproject.toml
scripts/: lint.sh
src/gpt/: transformer.py
