[tool.poetry]
name = "llm-experiments"
version = "0.1.0"
description = ""
authors = ["Piotr Mazurek <piotr635@gmail.com>"]
license = "Mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.3"
torch = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
mypy = "^1.8.0"
pytest = "*"
black = "*"

[tool.mypy]
files = "src,tests"
strict = "True"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
